@@ -52,5 +52,4 @@ private:
   float m_fFreq[2*AUDIO_BUFFER_SIZE];         // Frequency data
   bool m_bCalculate_Freq;       // True if the vis wants freq data
   bool m_bInitialized;
-  CCriticalSection m_critSection;
 };
